# train-500-embeddings

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  SE_MANIFEST.toml  config.toml  lychee.toml  pyproject.toml  zensical.toml
.github/: dependabot.yml
.github/workflows/: ci-shared.yml  deploy-docs-shared.yml  links.yml  release-pypi-mkdocs-shared.yml
artifacts/: 00_meta.json  01_vocabulary.csv  02_model_weights.csv  03_token_embeddings.csv
corpus/: 004_analytics.txt
docs/: index.md
outputs/: train_log.csv
src/toy_gpt_train/: a_tokenizer.py  b_vocab.py  c_model.py  d_train.py  e_infer.py  io_artifacts.py  math_training.py  prompts.py
tests/: test_model.py  test_train.py
